@@ -38,6 +38,7 @@ Due to [IDEA-119280](https://youtrack.jetbrains.com/issue/IDEA-119280), it is a 
    --add-exports javafx.controls/com.sun.javafx.scene.control=org.jabref
    --add-exports org.controlsfx.controls/impl.org.controlsfx.skin=org.jabref
    --add-exports javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls
+   --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
    --add-exports javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls
    --add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls
    --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls
@@ -48,9 +49,6 @@ Due to [IDEA-119280](https://youtrack.jetbrains.com/issue/IDEA-119280), it is a 
    --add-exports javafx.base/com.sun.javafx.runtime=org.controlsfx.controls
    --add-exports javafx.web/com.sun.webkit=org.controlsfx.controls
    --add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls
-   --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
-   --add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix
-   --add-exports com.oracle.truffle.regex/com.oracle.truffle.regex=org.graalvm.truffle
    --add-reads org.jabref=org.fxmisc.flowless
    --add-reads org.jabref=org.apache.commons.csv
    ```
